<resources>
    <string name="app_name">GCalendarClientMobile</string>

    <!--    メイン画面-->
    <string name="registration">登録</string>
    <string name="cancel">キャンセル</string>
    <string name="select_from_template">テンプレートから選択</string>

    <string name="summary">概要</string>

    <string name="location">場所</string>

    <string name="description">説明</string>

    <string name="summaryHint">予定のタイトル</string>

    <string name="locationHint">予定の場所</string>

    <string name="descriptionHint">予定の説明</string>
    <string name="startDateTime">開始日時</string>
    <string name="endDateTime">終了日時</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="slash">/</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="colon">:</string>
    <string name="choseFromCalendar">カレンダーから選択</string>
    <string name="allDay">終日</string>
    <string name="registrating">登録中...</string>
    <string name="pleaseSelectDatetime">日付を選択してください</string>


<!--    use TestActivity-->
    <string name="activityName">TestActivity</string>
    <string name="getCalendarList">カレンダー一覧出力</string>
    <string name="buck">戻る</string>


</resources>