<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="157dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/summary" />

    <TextView
        android:layout_width="389dp"
        android:layout_height="30dp"
        android:layout_marginTop="610dp"
        android:text="予定情報を入力してください"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/summary"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enteredSummary"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:autofillHints="空の予定"
        android:hint="@string/summaryHint"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@+id/summary"
        app:layout_constraintStart_toEndOf="@+id/summary"
        app:layout_constraintTop_toTopOf="@+id/summary" />

    <CheckBox
        android:id="@+id/allDayCheckBox"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:checked="false"
        android:text="@string/allDay"
        app:layout_constraintLeft_toRightOf="@id/endMinuteEdit"
        app:layout_constraintTop_toBottomOf="@+id/endDayEdit" />

    <TextView
        android:id="@+id/endSlash2Text"
        android:layout_width="15dp"
        android:layout_height="40dp"
        android:text="@string/slash"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/endYearEdit"
        app:layout_constraintStart_toEndOf="@+id/endMonthEdit"
        app:layout_constraintTop_toTopOf="@id/endYearEdit" />

    <EditText
        android:id="@+id/endYearEdit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:hint="@string/year"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/endDateTimeText"
        app:layout_constraintTop_toBottomOf="@id/endDateTimeText" />

    <EditText
        android:id="@+id/endDayEdit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:hint="@string/day"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/endYearEdit"
        app:layout_constraintStart_toEndOf="@+id/endSlash2Text"
        app:layout_constraintTop_toTopOf="@+id/endYearEdit" />

    <TextView
        android:id="@+id/startSlash2Text"
        android:layout_width="15dp"
        android:layout_height="40dp"
        android:text="@string/slash"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/startYearEdit"
        app:layout_constraintStart_toEndOf="@+id/startMonthEdit"
        app:layout_constraintTop_toTopOf="@id/startYearEdit" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="208dp"
        android:text="@string/summary"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDateTimeText"
        android:layout_width="109dp"
        android:layout_height="0dp"
        android:layout_marginTop="340dp"
        android:text="@string/startDateTime"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/summary"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/endMinuteEdit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:autofillHints="Minute"
        android:hint="@string/minute"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/endYearEdit"
        app:layout_constraintStart_toEndOf="@+id/endColonText"
        app:layout_constraintTop_toBottomOf="@id/endYearEdit" />

    <EditText
        android:id="@+id/startMinuteEdit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:autofillHints="Minute"
        android:hint="@string/minute"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/startYearEdit"
        app:layout_constraintStart_toEndOf="@+id/startColonText"
        app:layout_constraintTop_toBottomOf="@id/startYearEdit" />

    <TextView
        android:id="@+id/startColonText"
        android:layout_width="15dp"
        android:layout_height="40dp"
        android:text="@string/colon"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/startYearEdit"
        app:layout_constraintStart_toEndOf="@+id/startHourEdit"
        app:layout_constraintTop_toBottomOf="@id/startYearEdit" />

    <TextView
        android:id="@+id/startSlash1Text"
        android:layout_width="15dp"
        android:layout_height="40dp"
        android:text="@string/slash"
        android:textAlignment="center"
        android:textSize="30sp"

        app:layout_constraintLeft_toRightOf="@id/startYearEdit"
        app:layout_constraintTop_toTopOf="@id/startYearEdit" />

    <EditText
        android:id="@+id/startDayEdit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:hint="@string/day"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/startYearEdit"
        app:layout_constraintStart_toEndOf="@+id/startSlash2Text"
        app:layout_constraintTop_toTopOf="@+id/startYearEdit" />

    <TextView
        android:id="@+id/endColonText"
        android:layout_width="15dp"
        android:layout_height="40dp"
        android:text="@string/colon"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/endYearEdit"
        app:layout_constraintStart_toEndOf="@+id/endHourEdit"
        app:layout_constraintTop_toBottomOf="@id/endYearEdit" />

    <TextView
        android:id="@+id/description"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:text="@string/description"
        android:textSize="30sp"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <EditText
        android:id="@+id/endMonthEdit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:hint="@string/month"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/endYearEdit"
        app:layout_constraintStart_toEndOf="@+id/endSlash1Text"
        app:layout_constraintTop_toTopOf="@id/endYearEdit" />

    <EditText
        android:id="@+id/enteredDescription"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:autofillHints="空の予定"
        android:hint="@string/descriptionHint"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@+id/summary"
        app:layout_constraintStart_toEndOf="@+id/description"
        app:layout_constraintTop_toTopOf="@+id/description" />

    <EditText
        android:id="@+id/enteredLocation"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:autofillHints="空の予定"
        android:hint="@string/locationHint"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@+id/summary"
        app:layout_constraintStart_toEndOf="@+id/location"
        app:layout_constraintTop_toTopOf="@+id/location" />

    <EditText
        android:id="@+id/startMonthEdit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:hint="@string/month"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/startYearEdit"
        app:layout_constraintStart_toEndOf="@+id/startSlash1Text"
        app:layout_constraintTop_toTopOf="@id/startYearEdit" />

    <EditText
        android:id="@+id/startHourEdit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:autofillHints="Hour"
        android:hint="@string/hour"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/startYearEdit"
        app:layout_constraintTop_toBottomOf="@id/startYearEdit" />

    <TextView
        android:id="@+id/endSlash1Text"
        android:layout_width="15dp"
        android:layout_height="40dp"
        android:text="@string/slash"
        android:textAlignment="center"
        android:textSize="30sp"

        app:layout_constraintLeft_toRightOf="@id/endYearEdit"
        app:layout_constraintTop_toTopOf="@id/endYearEdit" />

    <EditText
        android:id="@+id/startYearEdit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:hint="@string/year"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/startDateTimeText"
        app:layout_constraintTop_toBottomOf="@id/startDateTimeText" />

    <TextView
        android:id="@+id/endDateTimeText"
        android:layout_width="123dp"
        android:layout_height="0dp"
        android:layout_marginTop="472dp"
        android:text="@string/endDateTime"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/summary"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/endHourEdit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:autofillHints="Hour"
        android:hint="@string/hour"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@id/endYearEdit"
        app:layout_constraintTop_toBottomOf="@id/endYearEdit" />


    <TextView
        android:id="@+id/location"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:text="@string/location"


        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/summary"
        app:layout_constraintTop_toBottomOf="@+id/summary" />

    <Button
        android:id="@+id/test"
        android:layout_width="157dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:text="Test"
        app:layout_constraintBottom_toBottomOf="@+id/registrationBtn"
        app:layout_constraintStart_toEndOf="@+id/registrationBtn" />

    <Spinner
        android:layout_width="343dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toTopOf="@+id/summary"
        app:layout_constraintStart_toStartOf="@+id/summary"
        android:id="@+id/spinner"
        android:autofillHints="登録するカレンダーを選択してください"

        />

    <TextView
        android:layout_width="272dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        android:id="@+id/selectedItem"/>

</androidx.constraintlayout.widget.ConstraintLayout>