<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/activityName"
        android:text="@string/activityName"
        android:textSize="50sp"

        />


    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/activityName"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:id="@+id/getCalendarList"
        android:text="@string/getCalendarList"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="10dp"
        android:text="@string/buck"
        android:textSize="30sp"
        android:id="@+id/buck"

        />


</androidx.constraintlayout.widget.ConstraintLayout>